# stm32-sample-application

./: .clang-format  .flake8  .gitignore  Doxyfile  LICENSE.txt  application.cppcheck  genindex.html  index.html  objects.inv  py-modindex.html  readme.html  readme.rst  search.html  searchindex.js
.devcontainer/: devcontainer.json
.github/workflows/: continuous_integration_pipeline.yml
_modules/: analyse_pcm.html  index.html
_sources/c-code/: crc.rst.txt  index.rst.txt
_sources/python/: analyse_pcm.rst.txt  index.rst.txt
applications/sample_application/sources/: crc.c  crc.h
c-code/: crc.html  index.html
cmake/: gnu-tools-for-stm32.cmake  vscode_generated.cmake
docs/source/: conf.py  index.rst
docs/source/_static/: custom.css
python/: analyse_pcm.html  index.html
scripts/: analyse_pcm.py  requirements-dev.txt  requirements-doc.txt  requirements.txt
sources/: CMakeLists.txt  application.c  application.h  crc.c  crc.h  sensor.c  sensor.h  version.h
stm32/: .cproject  .gitignore  .project  CMakeLists.txt  CMakePresets.json  STM32F303K8TX_FLASH.ld  sample_application Debug.launch  sample_application.ioc
stm32/Core/Inc/: main.h  stm32f3xx_hal_conf.h  stm32f3xx_it.h
stm32/Core/Src/: main.c  stm32f3xx_hal_msp.c  stm32f3xx_hal_timebase_tim.c  stm32f3xx_it.c
test/test/: .gitignore  CMakeLists.txt  CMakePresets.json  stm32f303x8_flash.ld
test/test/Src/: main.c  startup_stm32f303xx.S  syscall.c  sysmem.c
unit_test/crc/: CMakeLists.txt
unit_test/crc/mocks/: CMakeLists.txt
unit_test/crc/tests/: CMakeLists.txt  test_crc.cpp
(+13 files in other folders)
